[package]
name = "checker"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
futures = "0.3"
sha2 = "0.10.2"
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview", "base64", "hex"] }

logger = { version = "0.1.0", git = "https://github.com/kumanote/logger-rs", branch = "main", features = ["airbrake"] }
rebus-grpc-client = { version = "0.2.3", git = "https://github.com/kumanote/rebus-grpc-client-rs", tag = "v0.2.3" }

channel = { path = "../channel" }
rebuscli = { path = "../rebuscli" }
crypto = { path = "../crypto" }
config = { path = "../config" }

[dev-dependencies]

[features]
default = []
