[package]
name = "rebuscli"
version = "0.1.0"
authors = ["Hiroki Tanaka <hiroki.tanaka@kumano-te.com>"]
license = "kumanote,LLC. all rights reserved."
publish = false
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
once_cell = "1.10.0"
futures = "0.3"

logger = { version = "0.1.0", git = "https://github.com/kumanote/logger-rs", branch = "main", features = ["airbrake"] }
rebus-grpc-client = { version = "0.2.3", git = "https://github.com/kumanote/rebus-grpc-client-rs", tag = "v0.2.3" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
checker = { path = "../checker" }
